--- a/HadiShop/Pages/Index.cshtml
+++ b/HadiShop/Pages/Index.cshtml
@@ -6,30 +6,40 @@
 
 <div class="container">
     <form method="get">
-        <div class="form-group">
-            <input type="text" name="searchQuery" value="@Model.ViewModel.SearchQuery" class="form-control" placeholder="Search products..." />
+        <div class="row">
+            <div class="col-md-6 mb-2">
+                <div class="form-group">
+                    <input type="text" name="searchQuery" value="@Model.ViewModel.SearchQuery" class="form-control" placeholder="Search products..." />
+                </div>
+            </div>
+
+            <div class="col-md-4 mb-2">
+                <div class="form-group">
+                    <select name="selectedCategoryId" class="form-control">
+                        <option value="0" )>All Categories</option>
+                        @foreach (var category in Model.ViewModel.Categories)
+                        {
+                            @if (category.CategoryId == Model.ViewModel.SelectedCategoryId)
+                            {
+                                <option value="@category.CategoryId" selected>
+                                    @category.Name
+                                </option>
+                            }
+                            else
+                            {
+                                <option value="@category.CategoryId">
+                                    @category.Name
+                                </option>
+                            }
+                        }
+                    </select>
+                </div>
+            </div>
+
+            <div class="col-md-2 mb-2">
+                <button type="submit" class="btn btn-primary w-100">Search</button>
+            </div>
         </div>
-        <div class="form-group">
-            <select name="selectedCategoryId" class="form-control">
-                <option value="0" )>All Categories</option>
-                @foreach (var category in Model.ViewModel.Categories)
-                {
-                    @if (category.CategoryId == Model.ViewModel.SelectedCategoryId)
-                    {
-                        <option value="@category.CategoryId" selected>
-                            @category.Name
-                        </option>
-                    }
-                    else
-                    {
-                        <option value="@category.CategoryId">
-                            @category.Name
-                        </option>
-                    }
-                }
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Search</button>
     </form>
 
     <div class="row mt-4">
@@ -42,7 +52,7 @@
                         <h5 class="card-title">@product.Name</h5>
                         <p class="card-text">@product.Description</p>
                         <p class="card-text">Price: Rp @product.Price.ToString("N2", new System.Globalization.CultureInfo("id-ID"))</p>
-                        <a href="#" class="btn btn-primary">Details</a>
+                        <a href="/detail/@product.ProductId" class="btn btn-primary">Details</a>
                     </div>
                 </div>
             </div>
