--- a/HadiShop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/HadiShop/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -17,7 +17,7 @@
         <div class="col-md-3">
             <partial name="_ManageNav" />
         </div>
-        <div class="col-md-9">
+        <div class="col-md-9 mt-md-0 mt-3">
             @RenderBody()
         </div>
     </div>
